--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Melisa Katrancı</title>
   </head>
   <body class="bg-rose-50 text-zinc-900 dark:bg-zinc-900 dark:text-rose-50 font-serif">
     <div id="app"></div>
