add home content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Melisa Katrancı</title>
   </head>
-  <body class="bg-rose-50 text-zinc-900 dark:bg-zinc-900 dark:text-rose-50 font-serif">
+  <body
+    class="bg-rose-50 text-zinc-900 dark:bg-zinc-900 dark:text-rose-50 font-serif max-h-screen max-w-screen overflow-hidden"
+  >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
