add projects and blogs page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Melisa Katrancı</title>
   </head>
   <body
-    class="bg-rose-50 text-zinc-900 dark:bg-zinc-900 dark:text-rose-50 font-serif max-h-screen max-w-screen overflow-hidden"
+    class="bg-rose-50 text-zinc-900 dark:bg-zinc-900 dark:text-rose-50 font-serif max-h-screen max-w-screen"
   >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
